multimedia button fix
overlapping buttons now fixed on mobile versions of the website

--- a/Multimedia-style.css
+++ b/Multimedia-style.css
@@ -494,9 +494,10 @@ footer h1 {
     }
 
     .button-section {
-        flex-direction: row;
-        gap: 15px;
-        padding: 10px;
+        flex-direction: column;
+        gap: 10px;
+        padding: 5px;
+        padding-bottom: 15px;
         width: 100%;
         justify-content: center;
         align-items: center;
